Add new post page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
         - if authenticated?
           %ul
             %li
-              %a{ href: "#"} New Post
+              = link_to "New Post", new_article_path
             %li
               %a{ href: "#"} Footer Links
         %p
