Destroy assicated tags w/ articles

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,4 +1,7 @@
 - provide(:title, "Home")
 
+- if @articles.empty?
+  %h2 Tumbleweeds...
+  
 - @articles.each do |article|
   = render 'form', article: article
