--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title= (yield(:title) + raw(" &mdash; ") unless yield(:title).nil?) + "a.b.strider-"
+    %link{href: "/assets/favicon.png", rel: "icon", type: "image/png"}
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
