--- a/app/views/tags/posts_by_tag.html.haml
+++ b/app/views/tags/posts_by_tag.html.haml
@@ -2,6 +2,9 @@
 
 %h2= "Tagged with '#{@tag}'"
 
+- if @articles.empty?
+  %h3 Ain't nothin got that tag, son.
+  
 - @articles.each do |a|
   .post
     %h3= link_to a.title, article_path(a)
