--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -2,6 +2,7 @@
 
 %h2 New Post
 
+- @article.tags.build
 = form_for @article do |f|
   = f.hidden_field :user_id
   %p
@@ -14,6 +15,7 @@
     = f.text_area :content, class: "input"
   %p
     = f.label :tags
+    = render partial: 'tags/form', locals: { tags: @article.tags }   
   %p
     = f.submit value: "Post", class: "input"
     %input.input{ type: "button", value: "Cancel", id: "cancel" } 
