--- a/app/views/tags/posts_by_tag.html.haml
+++ b/app/views/tags/posts_by_tag.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, "Tagged '#{@tag}'")
 
-%h2= "Tagged with '#{@tag}'"
+%h2 Tagged with '#{@tag}'
 
 - if @articles.empty?
   %h3 Ain't nothin got that tag, son.
