--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,5 +1,5 @@
 .post
-  %h2= article.title
+  %h2= link_to article.title, article_path(article)
   %p.post_header
     ~"// Author:"
     = link_to article.user.nickname, user_path(article.user)
