--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,3 +46,4 @@
             = link_to "[l-]", logout_path, method: "delete"
           - else          
             = link_to "[l+]", login_path
+    = debug(params) if Rails.env.development?      
