--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
           %li
             = link_to "Home", root_path
           %li
-            %a{ href: "#"} Archive
+            = link_to "Archive", archive_path
           %li
             %a{ href: "#"} Projects
         - if authenticated?
