--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,15 +59,15 @@ h2 {
   border: dotted 1px #000;
   font-family: 'Courier New' , Courier, monospace;
   font-size: 10pt;
-  
-  .code {
-    width:30px;
-  }
-  
-  .input.title,
-  .input.link {
-    width: 405px;
-  }
+}
+
+.input.code {
+  width:30px;
+}
+
+.input.title,
+.input.link {
+  width: 405px;
 }
 
 .search {
@@ -169,7 +169,7 @@ h2 {
 
 .plink_tab {
   margin:0px;
-  padding:0px;
+  padding:10px;
 }
 
 .plink_info {
@@ -214,4 +214,8 @@ h2 {
   .disabled {
     display: none;
   }
+}
+
+.hidden {
+  display: none;
 }
