--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,8 +17,8 @@
             = link_to "Home", root_path
           %li
             = link_to "Archive", archive_path
-          %li
-            %a{ href: "#"} Projects
+          / %li
+          /  %a{ href: "#"} Projects
         - if authenticated?
           %ul
             %li
