--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -119,7 +119,8 @@ h2 {
 
   ul {
     list-style: none;
-    padding-left: 14px; 
+    padding-left: 0px;
+    padding-right: 15px; 
 
     li:before {
       content: '> ';
