--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,13 +5,18 @@
 %pre.profile
   = preserve do
     {
-    ="  'name': '#{@user.firstname} #{@user.lastname}',"
+    ="  \"name\": \"#{@user.firstname} #{@user.lastname}\","
     =""
-    ="  'dob': '#{@user.birthday}',"
+    ="  \"dob\": \"#{@user.birthday}\","
     =""
-    ="  'age': #{@user.age},"
+    ="  \"age\": #{@user.age},"
     =""    
-    ="  'bio': {"
-    ="       'desc': '#{@user.bio}'"
+    ="  \"bio\": {"
+    ="       \"desc\": \"#{@user.bio}\""
+    ="  },"
+    ="  \"articles\": {"
+    ="       \"latest\": [ "
+    !="          \"#{latest_articles @user}\""
+    ="        ]"                
     ="  }"
     }
