--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,17 @@
   %body
     .container
       .header
-        = render 'shared/banner'      
+        %pre
+          :preserve
+                        __                 __                   __                          
+                       /\ \               /\ \__         __    /\ \                         
+               __      \ \ \____      ____\ \ ,_\  _ __ /\_\   \_\ \     __   _ __          
+             /'__`\     \ \ '__`\    /',__\\ \ \/ /\`'__\/\ \  /'_` \  /'__`\/\`'__\_______ 
+            /\ \L\.\_  __\ \ \L\ \__/\__, `\\ \ \_\ \ \/ \ \ \/\ \L\ \/\  __/\ \ \//\______\
+            \ \__/.\_\/\_\\ \_,__/\_\/\____/ \ \__\\ \_\  \ \_\ \___,_\ \____\\ \_\\/______/
+             \/__/\/_/\/_/ \/___/\/_/\/___/   \/__/ \/_/   \/_/\/__,_ /\/____/ \/_/         
+
+             
         .subheader :: alt.binaries.strider- ::
       .sidebar
         %ul
